k8s/dummy-pdf-or-png/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assignment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  strategy: {}
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - image: dagandersen/visma-sre
        name: visma-assignment
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
status: {}
