k8s/dummy-pdf-or-png/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
