k8s/dummy-pdf-or-png/ingress-local.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-local
spec:
  rules:
  - host: visma.locahost
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: svc
            port:
              name: http
