k8s/dummy-pdf-or-png/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: visma.localhost
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: svc
            port:
              name: http
